# XTope

./: .gitignore  LICENSE  README.md  bench_1k_4.db-shm  bench_1k_4.db-wal  generate_large_benchmark.py  pyproject.toml  requirements-optional.txt
src/antigen_screener/: __init__.py  __main__.py  aligner.py  db_loader.py  evalue.py  generate_test_data.py  kmer_filter.py  physicochemical.py  pipeline.py  ra_diagonal_filter.py  store.py  tag_stripper.py  vectorized_sw.py
src/xtope/: __init__.py  __main__.py  aligner.py  evalue.py  generate_test_data.py  kmer_filter.py  pipeline.py  sw_fallback.py  tag_stripper.py  vectorized_sw.py
tests/: conftest.py  test_aligner.py  test_db_loader.py  test_kmer_filter.py  test_physicochemical.py  test_pipeline.py  test_ra_diagonal.py  test_store.py  test_tag_stripper.py
